Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,20 +1,13 @@
 slogan: Veranderen is mensenwerk
-landing-tekt: |-
-  Wij begeleiden organisaties en professionals zich
-
-  te ontwikkelen naar een gezonde en effectieve werk-
-  cultuur. Met onze frisse blik hebben we de afgelopen
-
-  25 jaar al veel organisaties geholpen proactief te
-  worden. Dat doen we altijd op maat, met oog voor wat
-  de mens(en) beweegt. Daarom zeggen wij dan ook:
-  "Veranderen is mensenwerk".
+landing-tekt: 'Wij begeleiden organisaties en professionals zich te ontwikkelen
+  naar een gezonde en effectieve werkcultuur. Met onze frisse blik hebben we de
+  afgelopen 25 jaar al veel organisaties geholpen proactief te worden. Dat doen
+  we altijd op maat, met oog voor wat de mens(en) beweegt. Daarom zeggen wij dan
+  ook: "Veranderen is mensenwerk".'
 waar-wij-voor-staan: Waar wij voor staan
-waar-wijvoor-staan-tekst: |-
-  Congruentie in zeggen & doen is essentieel voor ons. Zowel hoe we onderling
-  samenwerken in ons bedrijf, als hoe we samenwerken met onze opdrachtgevers.
-
-  Aan sommige zaken valt niet te tornen. Wij zijn:
+waar-wijvoor-staan-tekst: "Congruentie in zeggen & doen is essentieel voor ons.
+  Zowel hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met
+  onze opdrachtgevers. Aan sommige zaken valt niet te tornen. Wij zijn:"
 waarde-1-titel: Mensgericht
 waarde-1-tekst: |-
   Menselijker maken van de werk-
