--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,103 +9,55 @@ waar-wijvoor-staan-tekst: "Congruentie in zeggen & doen is essentieel voor ons.
   Zowel hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met
   onze opdrachtgevers. Aan sommige zaken valt niet te tornen. Wij zijn:"
 waarde-1-titel: Mensgericht
-waarde-1-tekst: |-
-  Menselijker maken van de werk-
-  vloer/persoonlijk leiderschap/gelo-
-  ven in ontwikkeling. Autonomie.
-
-  Eigen regie. Zelf ontplooiing. Jezelf
-
-  als instrument. Dubbele hoeveel-
-  heid dus Lorem ipsum dolor sit
-
-  amet, consectetur adipiscing elit,
-  sed do eiusmod tempor incididunt
-  ut labore et dolore magna aliqua.
+waarde-1-tekst: Menselijker maken van de werkvloer/persoonlijk
+  leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelfontplooiing.
+  Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
+  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+  dolore magna aliqua.
 waarde-1-afbeelding: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
 waarde-2-titel: Transparant
-waarde-2-tekst: |-
-  Menselijker maken van de werk-
-  vloer/persoonlijk leiderschap/gelo-
-  ven in ontwikkeling. Autonomie.
-
-  Eigen regie. Zelf ontplooiing. Jezelf
-
-  als instrument. Dubbele hoeveel-
-  heid dus Lorem ipsum dolor sit
-
-  amet, consectetur adipiscing elit,
-  sed do eiusmod tempor incididunt
-  ut labore et dolore magna aliqua.
+waarde-2-tekst: Menselijker maken van de werkvloer/persoonlijk
+  leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
+  Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
+  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+  dolore magna aliqua.
 waarde-2-afbeelding: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
 waarde-3-titel: Systemisch
-waarde-3-tekst: |-
-  Menselijker maken van de werk-
-  vloer/persoonlijk leiderschap/gelo-
-  ven in ontwikkeling. Autonomie.
-
-  Eigen regie. Zelf ontplooiing. Jezelf
-
-  als instrument. Dubbele hoeveel-
-  heid dus Lorem ipsum dolor sit
-
-  amet, consectetur adipiscing elit,
-  sed do eiusmod tempor incididunt
-  ut labore et dolore magna aliqua.
+waarde-3-tekst: Menselijker maken van de werkvloer/persoonlijk
+  leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
+  Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
+  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+  dolore magna aliqua.
 waarde-3-afbeelding: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
 wat-wij-doen: Wat wij doen
-wat-wij-doen-tekst: >-
-  Introducerende tekst: We werken met een organisatiebrede/holistische blik en
-
-  werken vanuit een aantal expertises zoals Lorem ipsum dolor sit amet, consec
-
-  tetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-
-  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+wat-wij-doen-tekst: "Introducerende tekst: We werken met een
+  organisatiebrede/holistische blik en werken vanuit een aantal expertises zoals
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+  nostrud exercitation ullamco laboris."
 wat-wij-doen-1-titel: Organisatieontwikkeling & teamontwikkeling
-wat-wij-doen-1-tekst: |-
-  We adviseren en begeleiden teams
-  en organisaties bij veranderingen.
-  Van kortere (teambuilding en
-
-  proactief gedrag) tot langere tra-
-  jecten (blijvende cultuurverande-
-  ring of reorganisaties) en 'alles
-
-  daartussenin'. Ook helpen we bij de
-  transformatie naar meer zelfsturing.
+wat-wij-doen-1-tekst: We adviseren en begeleiden teams en organisaties bij
+  veranderingen. Van kortere (teambuilding en proactief gedrag) tot langere
+  trajecten (blijvende cultuurverandering of reorganisaties) en 'alles
+  daartussenin'. Ook helpen we bij de transformatie naar meer zelfsturing.
 wat-wij-doen-1-contact: |-
   Meer weten?
   Neem contact op met Sjef.
 wat-wij-doen-1-button: Contact met Sjef
 wat-wij-doen-2-titel: Interim management
-wat-wij-doen-2-tekst: |-
-  We nemen voor een bepaalde tijd
-  het roer over of zijn een stevige
-
-  'wingman' van een team of organi-
-  satie. Een aantal van ons is daarbij
-
-  gespecialiseerd in HR-interim of
-  IT-interimmanagement.
+wat-wij-doen-2-tekst: We nemen voor een bepaalde tijd het roer over of zijn een
+  stevige 'wingman' van een team of organisatie. Een aantal van ons is daarbij
+  gespecialiseerd in HR-interim of IT-interimmanagement.
 wat-wij-doen-2-contact: |-
   Meer weten?
   Neem contact op met Meggie.
 wat-wij-doen-2-button: Contact met Meggie
 wat-wij-doen-3-titel: Leren & ontwikkelen
-wat-wij-doen-3-tekst: |-
-  We helpen organisaties te komen
-  tot een gezond leerklimaat. Met
-  korte interventies en workshops, of
-
-  met het neerzetten van een struc-
-  tuur waarin formeel en informeel
-
-  leren continu 'gewoon wordt'.
-  We organiseren ontwikkeltrajecten
-
-  op maat op het gebied van per-
-  soonlijk leiderschap.
+wat-wij-doen-3-tekst: We helpen organisaties te komen tot een gezond
+  leerklimaat. Met korte interventies en workshops, of met het neerzetten van
+  een structuur waarin formeel en informeel leren continu 'gewoon wordt'. We
+  organiseren ontwikkeltrajecten op maat op het gebied van persoonlijk
+  leiderschap.
 wat-wij-doen-3-contact: |-
   Meer weten?
   Neem contact op met Marit.
@@ -120,11 +72,10 @@ logos:
   - naam-bedrijf: Bedrijf 1
     logo-bedrijf: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
 contact-titel: Contact
-contact-omschrijving: |-
-  We komen graag met je in contact. Bel of mail direct een van
-  onze collega’s of vul onderstaand formulier in. Lorem ipsum
-  dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.
+contact-omschrijving: We komen graag met je in contact. Bel of mail direct een
+  van onze collega’s of vul onderstaand formulier in. Lorem ipsum dolor sit
+  amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+  et dolore magna aliqua.
 contact-naam: Naam
 contact-email: E-mail
 contact-onderwerp: Onderwerp
