--- a/_data/home.yml
+++ b/_data/home.yml
@@ -41,7 +41,7 @@ wat-wij-doen-1-tekst: We adviseren en begeleiden teams en organisaties bij
   trajecten (blijvende cultuurverandering of reorganisaties) en 'alles
   daartussenin'. Ook helpen we bij de transformatie naar meer zelfsturing.
 wat-wij-doen-1-contact: |-
-  Meer weten?
+  **Meer weten?**
   Neem contact op met Sjef.
 wat-wij-doen-1-button: Contact met Sjef
 wat-wij-doen-2-titel: Interim management
@@ -49,7 +49,7 @@ wat-wij-doen-2-tekst: We nemen voor een bepaalde tijd het roer over of zijn een
   stevige 'wingman' van een team of organisatie. Een aantal van ons is daarbij
   gespecialiseerd in HR-interim of IT-interimmanagement.
 wat-wij-doen-2-contact: |-
-  Meer weten?
+  **Meer weten?**
   Neem contact op met Meggie.
 wat-wij-doen-2-button: Contact met Meggie
 wat-wij-doen-3-titel: Leren & ontwikkelen
@@ -59,7 +59,7 @@ wat-wij-doen-3-tekst: We helpen organisaties te komen tot een gezond
   organiseren ontwikkeltrajecten op maat op het gebied van persoonlijk
   leiderschap.
 wat-wij-doen-3-contact: |-
-  Meer weten?
+  **Meer weten?**
   Neem contact op met Marit.
 wat-wij-doen-3-button: Contact met Marit
 hoe-wij-werken: Meer weten over hóe wij werken?
