--- a/_data/home.yml
+++ b/_data/home.yml
@@ -71,6 +71,8 @@ partners-titel: Samengewerkt met o.a.
 logos:
   - naam-bedrijf: Bedrijf 1
     logo-bedrijf: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
+  - naam-bedrijf: Bedrijf 2
+    logo-bedrijf: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
 contact-titel: Contact
 contact-omschrijving: We komen graag met je in contact. Bel of mail direct een
   van onze collega’s of vul onderstaand formulier in. Lorem ipsum dolor sit
