Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -14,21 +14,21 @@ waarde-1-tekst: Menselijker maken van de werkvloer/persoonlijk
   Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua.
-waarde-1-afbeelding: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
+waarde-1-afbeelding: /assets/images/upload/undraw_family_vg76.svg
 waarde-2-titel: Transparant
 waarde-2-tekst: Menselijker maken van de werkvloer/persoonlijk
   leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
   Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua.
-waarde-2-afbeelding: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
+waarde-2-afbeelding: /assets/images/upload/undraw_reminder_re_fe15.svg
 waarde-3-titel: Systemisch
 waarde-3-tekst: Menselijker maken van de werkvloer/persoonlijk
   leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
   Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua.
-waarde-3-afbeelding: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
+waarde-3-afbeelding: /assets/images/upload/undraw_projections_re_ulc6.svg
 wat-wij-doen: Wat wij doen
 wat-wij-doen-tekst: "Introducerende tekst: We werken met een
   organisatiebrede/holistische blik en werken vanuit een aantal expertises zoals
