Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -87,4 +87,4 @@ uitnodiging: "Of kom langs in ons gezellige/scheve/ pittoreske Amsterdamse kanto
 postcode: 1013 GA Amsterdam
 uitnodiging-adres: ""
 adres: Singel 2a
-afbeelding-kantoor: Afbeelding Kantoor
+afbeelding-kantoor: /assets/images/upload/typisch-hollands-magneet-grachtenhuisje-amsterdam.jpg
