Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,27 +8,27 @@ waar-wij-voor-staan: Waar wij voor staan
 waar-wijvoor-staan-tekst: "Congruentie in zeggen & doen is essentieel voor ons.
   Zowel hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met
   onze opdrachtgevers. Aan sommige zaken valt niet te tornen. Wij zijn:"
-waarde-1-titel: Mensgericht
+waarde-1-titel: In verbinding
 waarde-1-tekst: Menselijker maken van de werkvloer/persoonlijk
   leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelfontplooiing.
   Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua.
-waarde-1-afbeelding: /assets/images/upload/undraw_family_vg76.svg
-waarde-2-titel: Transparant
+waarde-1-afbeelding: /assets/images/upload/icoon3.png
+waarde-2-titel: In vertrouwen
 waarde-2-tekst: Menselijker maken van de werkvloer/persoonlijk
   leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
   Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua.
-waarde-2-afbeelding: /assets/images/upload/undraw_reminder_re_fe15.svg
-waarde-3-titel: Systemisch
+waarde-2-afbeelding: /assets/images/upload/icoon2.png
+waarde-3-titel: In context
 waarde-3-tekst: Menselijker maken van de werkvloer/persoonlijk
   leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
   Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
   consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua.
-waarde-3-afbeelding: /assets/images/upload/undraw_projections_re_ulc6.svg
+waarde-3-afbeelding: /assets/images/upload/icoon1.png
 wat-wij-doen: Wat wij doen
 wat-wij-doen-tekst: "Introducerende tekst: We werken met een
   organisatiebrede/holistische blik en werken vanuit een aantal expertises zoals
@@ -87,4 +87,4 @@ uitnodiging: "Of kom langs in ons gezellige/scheve/ pittoreske Amsterdamse kanto
 postcode: 1013 GA Amsterdam
 uitnodiging-adres: ""
 adres: Singel 2a
-afbeelding-kantoor: /assets/images/upload/typisch-hollands-magneet-grachtenhuisje-amsterdam.jpg
+afbeelding-kantoor: /assets/images/upload/kantoor.png
