Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,66 +1,116 @@
 slogan: Veranderen is mensenwerk
-landing-tekt: 'Wij begeleiden organisaties en **professionals** zich te
-  ontwikkelen naar een gezonde en effectieve werkcultuur. Met onze frisse blik
-  hebben we de afgelopen 25 jaar al veel organisaties geholpen proactief te
-  worden. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
-  Daarom zeggen wij dan ook: "Veranderen is mensenwerk".'
+landing-tekt: >-
+  Human Connection is een organisatieadviesbureau van 15 mensen sterk.​
+
+
+  ​Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
+
+
+  ​Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
 waar-wij-voor-staan: Waar wij voor staan
-waar-wijvoor-staan-tekst: "Congruentie in zeggen & doen is essentieel voor ons.
-  Zowel hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met
-  onze opdrachtgevers. Aan sommige zaken valt niet te tornen. Wij zijn:"
+waar-wijvoor-staan-tekst: We doen wat we zeggen en zeggen wat we doen.  Zowel
+  hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
+  opdrachtgevers. Wij werken altijd:​
 waarde-1-titel: In verbinding
-waarde-1-tekst: Menselijker maken van de werkvloer/persoonlijk
-  leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelfontplooiing.
-  Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
-  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna aliqua.
+waarde-1-tekst: >-
+  We creëren synergie tussen mensen onderling, en hun verbinding met het doel
+  van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
+  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.​
+
+
+  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? ​
+
+
+  *T﻿ekst gaat hier eigenlijk nog door maar dit wordt te lang.*
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: In vertrouwen
-waarde-2-tekst: Menselijker maken van de werkvloer/persoonlijk
-  leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
-  Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
-  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna aliqua.
+waarde-2-tekst: >-
+  We bouwen aan vertrouwen.
+  Aan persoonlijk leiderschap  en professionele ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We werken open en transparant samen met onze klanten. ​
+
+
+  A﻿ls Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
 waarde-2-afbeelding: /assets/images/upload/icoon2.png
 waarde-3-titel: In context
-waarde-3-tekst: Menselijker maken van de werkvloer/persoonlijk
-  leiderschap/geloven in ontwikkeling. Autonomie. Eigen regie. Zelf ontplooiing.
-  Jezelf als instrument. Dubbele hoeveelheid dus Lorem ipsum dolor sit amet,
-  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna aliqua.
+waarde-3-tekst: >-
+  We sluiten nauw aan bij de bestaande context
+  van een  organisatie en mensen. We bekijken iedere vraag, hoe groot of klein ook,
+  met een brede blik. 'Wat is hier nou echt aan de hand?
+  Welke patronen spelen hier?' ​
+
+
+  Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
 wat-wij-doen: Wat wij doen
-wat-wij-doen-tekst: "Introducerende tekst: We werken met een
-  organisatiebrede/holistische blik en werken vanuit een aantal expertises zoals
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-  nostrud exercitation ullamco laboris."
+wat-wij-doen-tekst: "We benaderen ieder vraagstuk met
+  een organisatiebrede blik. Dit doen we vanuit een aantal expertises:"
 wat-wij-doen-1-titel: Organisatieontwikkeling & teamontwikkeling
-wat-wij-doen-1-tekst: We adviseren en begeleiden teams en organisaties bij
-  veranderingen. Van kortere (teambuilding en proactief gedrag) tot langere
-  trajecten (blijvende cultuurverandering of reorganisaties) en 'alles
-  daartussenin'. Ook helpen we bij de transformatie naar meer zelfsturing.
-wat-wij-doen-1-contact: |
+wat-wij-doen-1-tekst: >-
+  We adviseren en begeleiden teams en organisaties bij
+  veranderingen. Via langere trajecten (blijvende cultuurverandering of reorganisaties), kortere interventies (teambuilding
+  en proactief gedrag) en 'alles daartussenin'.​
+
+
+  ​Bijvoorbeeld:​
+
+
+  * Transformatie naar meer zelfsturing​
+
+  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.​
+
+  * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
+
+  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren​
+
+  * invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)​
+
+  * Programma en projectmanagement​
+wat-wij-doen-1-contact: |-
   **Meer weten?**\
-  Neem contact op met Sjef.
+  Neem bijvoorbeeld contact op met Sjef of Zilla.
 wat-wij-doen-1-button: Contact met Sjef
 wat-wij-doen-2-titel: Interim management
-wat-wij-doen-2-tekst: We nemen voor een bepaalde tijd het roer over of zijn een
-  stevige 'wingman' van een team of organisatie. Een aantal van ons is daarbij
-  gespecialiseerd in HR-interim of IT-interimmanagement.
-wat-wij-doen-2-contact: |
+wat-wij-doen-2-tekst: >-
+  We nemen voor een bepaalde tijd het roer over of zijn een stevige ***'wingman'*** van een team
+  of organisatie. Dit doen we graag in combinatie met een veranderopgave. ​
+
+
+  ​We doen dit bijvoorbeeld op het gebied van:​
+
+
+  * Verandermanagement​
+
+  * HR-management​
+
+  * strategie-implementatie​
+
+  * ICTmanagement​
+
+  * L&O Professional​
+wat-wij-doen-2-contact: |-
   **Meer weten?**\
-  Neem contact op met Meggie.
+  Neem bijvoorbeeld contact op met Meggie of Dorothé.
 wat-wij-doen-2-button: Contact met Meggie
 wat-wij-doen-3-titel: Leren & ontwikkelen
-wat-wij-doen-3-tekst: We helpen organisaties te komen tot een gezond
-  leerklimaat. Met korte interventies en workshops, of met het neerzetten van
-  een structuur waarin formeel en informeel leren continu 'gewoon wordt'. We
-  organiseren ontwikkeltrajecten op maat op het gebied van persoonlijk
-  leiderschap.
-wat-wij-doen-3-contact: |
+wat-wij-doen-3-tekst: >-
+  We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders, leidinggevenden en professionals. Persoonlijk leiderschap en persoonlijke effectiviteit zijn hierbij belangrijke thema's.​
+
+
+  ​Het ontwerpen en uitvoeren van ontwikkeltrajecten​
+
+
+  * Leiderschapsprogramma's​
+
+  * Opzetten en begeleiden van effectieve intervisie​
+
+  * Individuele coaching​
+
+  * Advies, strategie en begeleiding bij talentmanagement/traineeprogramma's ​
+
+  * Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuu
+wat-wij-doen-3-contact: |-
   **Meer weten?**\
-  Neem contact op met Marit.
+  Neem bijvoorbeeld contact op met Marit of Annet.
 wat-wij-doen-3-button: Contact met Marit
 hoe-wij-werken: Meer weten over hóe wij werken?
 wie-wij-zijn: Wie wij zijn
