Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -29,7 +29,7 @@ waarde-2-tekst: >-
   Aan persoonlijk leiderschap  en professionele ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We werken open en transparant samen met onze klanten. ​
 
 
-  A﻿ls Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
+  Als Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
 waarde-2-afbeelding: /assets/images/upload/icoon2.png
 waarde-3-titel: In context
 waarde-3-tekst: >-
