Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,9 +8,9 @@ landing-tekt: >-
 
   ​Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
 waar-wij-voor-staan: Waar wij voor staan
-waar-wijvoor-staan-tekst: We doen wat we zeggen en zeggen wat we doen.  Zowel
+waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
   hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
-  opdrachtgevers. Wij werken altijd:​
+  opdrachtgevers. Wij werken altijd:"
 waarde-1-titel: In verbinding
 waarde-1-tekst: >-
   We creëren synergie tussen mensen onderling, en hun verbinding met het doel
