Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 slogan: Veranderen is mensenwerk
 landing-tekt: >-
-  Human Connection is een organisatieadviesbureau van 15 mensen sterk.​
+  Human Connection is een organisatieadviesbureau van 15 mensen sterk.
 
 
   ​Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
