--- a/_data/home.yml
+++ b/_data/home.yml
@@ -54,17 +54,12 @@ wat-wij-doen-1-tekst: >-
   Bijvoorbeeld:
 
 
-  * Transformatie naar meer zelfsturing
-
-  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.
-
-  * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.
-
-  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren
-
-  * invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)
-
-  * Programma en projectmanagement
+  - Transformatie naar meer zelfsturing
+  - Faciliteren verdiepende gesprekken en krachtige besluitvorming.
+  - Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.
+  - Reorganisaties/fusies/samenwerkingsverbanden optimaliseren
+  - invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)
+  - Programma en projectmanagement
 wat-wij-doen-1-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Sjef of Zilla.
