Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,106 +3,111 @@ landing-tekt: >-
   Human Connection is een organisatieadviesbureau van 15 mensen sterk.
 
 
-  Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
+  ​Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
 
 
-  Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
+  ​Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
 waar-wij-voor-staan: Waar wij voor staan
-waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
-  hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
-  opdrachtgevers. Wij werken altijd:"
+waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
+  hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
+  opdrachtgevers. Wij werken altijd:"
 waarde-1-titel: In verbinding
 waarde-1-tekst: >-
-  We creëren synergie tussen mensen onderling, en hun verbinding met het doel
-  van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
-  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.​
+  We creëren synergie tussen mensen onderling, en hun verbinding met het doel
+  van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
+  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.​
 
 
-  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? ​
+  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? ​
 
 
-  *Tekst gaat hier eigenlijk nog door maar dit wordt te lang.*
+  *T﻿ekst gaat hier eigenlijk nog door maar dit wordt te lang.*
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: In vertrouwen
 waarde-2-tekst: >-
-  We bouwen aan vertrouwen.
-  Aan persoonlijk leiderschap en professionele ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We werken open en transparant samen met onze klanten. ​
+  We bouwen aan vertrouwen.
+  Aan persoonlijk leiderschap  en professionele ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We werken open en transparant samen met onze klanten. ​
 
 
   Als Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
 waarde-2-afbeelding: /assets/images/upload/icoon2.png
 waarde-3-titel: In context
 waarde-3-tekst: >-
-  We sluiten nauw aan bij de bestaande context
-  van een  organisatie en mensen. We bekijken iedere vraag, hoe groot of klein ook,
-  met een brede blik. 'Wat is hier nou echt aan de hand?
-  Welke patronen spelen hier?'
+  We sluiten nauw aan bij de bestaande context
+  van een  organisatie en mensen. We bekijken iedere vraag, hoe groot of klein ook,
+  met een brede blik. 'Wat is hier nou echt aan de hand?
+  Welke patronen spelen hier?' ​
 
 
-  Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
+  Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
 wat-wij-doen: Wat wij doen
 wat-wij-doen-tekst: "We benaderen ieder vraagstuk met
-  een organisatiebrede blik. Dit doen we vanuit een aantal expertises:"
+  een organisatiebrede blik. Dit doen we vanuit een aantal expertises:"
 wat-wij-doen-1-titel: Organisatieontwikkeling & teamontwikkeling
 wat-wij-doen-1-tekst: >-
-  We adviseren en begeleiden teams en organisaties bij
-  veranderingen. Via langere trajecten (blijvende cultuurverandering of reorganisaties), kortere interventies (teambuilding
-  en proactief gedrag) en 'alles daartussenin'.
+  We adviseren en begeleiden teams en organisaties bij
+  veranderingen. Via langere trajecten (blijvende cultuurverandering of reorganisaties), kortere interventies (teambuilding
+  en proactief gedrag) en 'alles daartussenin'.​
 
 
-  Bijvoorbeeld:
+  ​Bijvoorbeeld:​
 
 
-  - Transformatie naar meer zelfsturing
-  - Faciliteren verdiepende gesprekken en krachtige besluitvorming.
-  - Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.
-  - Reorganisaties/fusies/samenwerkingsverbanden optimaliseren
-  - invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)
-  - Programma en projectmanagement
+  * Transformatie naar meer zelfsturing​
+
+  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.​
+
+  * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
+
+  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren​
+
+  * invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)​
+
+  * Programma en projectmanagement​
 wat-wij-doen-1-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Sjef of Zilla.
 wat-wij-doen-1-button: Contact met Sjef
 wat-wij-doen-2-titel: Interim management
 wat-wij-doen-2-tekst: >-
-  We nemen voor een bepaalde tijd het roer over of zijn een stevige ***'wingman'*** van een team
-  of organisatie. Dit doen we graag in combinatie met een veranderopgave. 
+  We nemen voor een bepaalde tijd het roer over of zijn een stevige ***'wingman'*** van een team
+  of organisatie. Dit doen we graag in combinatie met een veranderopgave. ​
 
 
-  We doen dit bijvoorbeeld op het gebied van:
+  ​We doen dit bijvoorbeeld op het gebied van:​
 
 
-  * Verandermanagement
+  * Verandermanagement​
 
-  * HR-management
+  * HR-management​
 
-  * strategie-implementatie
+  * strategie-implementatie​
 
-  * ICTmanagement
+  * ICTmanagement​
 
-  * L&O Professional
+  * L&O Professional​
 wat-wij-doen-2-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Meggie of Dorothé.
 wat-wij-doen-2-button: Contact met Meggie
 wat-wij-doen-3-titel: Leren & ontwikkelen
 wat-wij-doen-3-tekst: >-
-  We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders, leidinggevenden en professionals. Persoonlijk leiderschap en persoonlijke effectiviteit zijn hierbij belangrijke thema's.​
+  We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders, leidinggevenden en professionals. Persoonlijk leiderschap en persoonlijke effectiviteit zijn hierbij belangrijke thema's.​
 
 
-  Het ontwerpen en uitvoeren van ontwikkeltrajecten
+  ​Het ontwerpen en uitvoeren van ontwikkeltrajecten​
 
 
-  * Leiderschapsprogramma's
+  - Leiderschapsprogramma's​
 
-  * Opzetten en begeleiden van effectieve intervisie
+  - Opzetten en begeleiden van effectieve intervisie​
 
-  * Individuele coaching
+  - Individuele coaching​
 
-  * Advies, strategie en begeleiding bij talentmanagement/traineeprogramma's 
+  - Advies, strategie en begeleiding bij talentmanagement/traineeprogramma's ​
 
-  * Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuu
+  - Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuur
 wat-wij-doen-3-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Marit of Annet.
