Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -109,7 +109,7 @@ wat-wij-doen-3-tekst: >-
 
   - Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuur
 wat-wij-doen-3-contact: |-
-  **Meer weten?**\
+  **Meer weten?**
   Neem bijvoorbeeld contact op met Marit of Annet.
 wat-wij-doen-3-button: Contact met Marit
 hoe-wij-werken: Meer weten over hóe wij werken?
