--- a/_data/home.yml
+++ b/_data/home.yml
@@ -60,7 +60,7 @@ wat-wij-doen-1-tekst: >-
 
   * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
 
-  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren​
+  * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren
 
   * invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)​
 
@@ -96,20 +96,19 @@ wat-wij-doen-3-tekst: >-
   We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders, leidinggevenden en professionals. Persoonlijk leiderschap en persoonlijke effectiviteit zijn hierbij belangrijke thema's.​
 
 
-  ​Het ontwerpen en uitvoeren van ontwikkeltrajecten​
+  Het ontwerpen en uitvoeren van ontwikkeltrajecten
 
+  * Leiderschapsprogramma's
 
-  - Leiderschapsprogramma's​
+  * Opzetten en begeleiden van effectieve intervisie
 
-  - Opzetten en begeleiden van effectieve intervisie​
+  * Individuele coaching
 
-  - Individuele coaching​
+  * Advies, strategie en begeleiding bij talentmanagement/traineeprogramma's 
 
-  - Advies, strategie en begeleiding bij talentmanagement/traineeprogramma's ​
-
-  - Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuur
+  * Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuur
 wat-wij-doen-3-contact: |-
-  **Meer weten?**
+  **Meer weten?**\
   Neem bijvoorbeeld contact op met Marit of Annet.
 wat-wij-doen-3-button: Contact met Marit
 hoe-wij-werken: Meer weten over hóe wij werken?
