--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,10 +3,10 @@ landing-tekt: >-
   Human Connection is een organisatieadviesbureau van 15 mensen sterk.
 
 
-  ​Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
+  Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
 
 
-  ​Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
+  Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
 waar-wij-voor-staan: Waar wij voor staan
 waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
   hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
@@ -15,10 +15,10 @@ waarde-1-titel: In verbinding
 waarde-1-tekst: >-
   We creëren synergie tussen mensen onderling, en hun verbinding met het doel
   van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
-  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.​
+  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.
 
 
-  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? ​
+  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? 
 
 
   *Tekst gaat hier eigenlijk nog door maar dit wordt te lang.*
@@ -26,7 +26,7 @@ waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: In vertrouwen
 waarde-2-tekst: >-
   We bouwen aan vertrouwen.
-  Aan persoonlijk leiderschap  en professionele ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We werken open en transparant samen met onze klanten. ​
+  Aan persoonlijk leiderschap  en professionele ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We werken open en transparant samen met onze klanten. 
 
 
   Als Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
@@ -36,7 +36,7 @@ waarde-3-tekst: >-
   We sluiten nauw aan bij de bestaande context
   van een  organisatie en mensen. We bekijken iedere vraag, hoe groot of klein ook,
   met een brede blik. 'Wat is hier nou echt aan de hand?
-  Welke patronen spelen hier?' ​
+  Welke patronen spelen hier?' 
 
 
   Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
@@ -48,15 +48,15 @@ wat-wij-doen-1-titel: Organisatieontwikkeling & teamontwikkeling
 wat-wij-doen-1-tekst: >-
   We adviseren en begeleiden teams en organisaties bij
   veranderingen. Via langere trajecten (blijvende cultuurverandering of reorganisaties), kortere interventies (teambuilding
-  en proactief gedrag) en 'alles daartussenin'.​
+  en proactief gedrag) en 'alles daartussenin'.
 
 
-  ​Bijvoorbeeld:​
+  Bijvoorbeeld:
 
 
-  * Transformatie naar meer zelfsturing​
+  * Transformatie naar meer zelfsturing
 
-  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.​
+  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.
 
   * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
 
