--- a/_data/home.yml
+++ b/_data/home.yml
@@ -12,7 +12,7 @@ waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
   hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
   opdrachtgevers. Wij werken altijd:"
 waarde-1-titel: In verbinding
-waarde-1-tekst: >-
+waarde-1-tekst: >
   We creëren synergie tussen mensen onderling, en hun verbinding met het doel
   van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
   en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.
