--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,7 +6,7 @@ landing-tekt: >-
   Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
 
 
-  Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt. Test
+  Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
 waar-wij-voor-staan: Waar wij voor staan
 waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
   hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
