--- a/_data/home.yml
+++ b/_data/home.yml
@@ -107,7 +107,7 @@ wat-wij-doen-3-tekst: >-
 
   * Individuele coaching
 
-  * Advies, strategie en begeleiding bij talentmanagement/traineeprogramma's 
+  * Advies, strategie en begeleiding bij talentmanagement/ traineeprogramma's 
 
   * Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuur
 wat-wij-doen-3-contact: |-
