--- a/_data/home.yml
+++ b/_data/home.yml
@@ -121,10 +121,12 @@ actievraag-subtitel: Ontdek hoe wij hierbij kunnen helpen.
 actievraag-button: Kom in contact met ons
 partners-titel: Samengewerkt met o.a.
 logos:
-  - naam-bedrijf: Bedrijf 1
-    logo-bedrijf: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
-  - naam-bedrijf: Bedrijf 2
-    logo-bedrijf: /assets/images/upload/f7247289a0b75283c494c26bad7141f7.png
+  - naam-bedrijf: Accell Group
+    logo-bedrijf: /assets/images/upload/accell-group.png
+  - naam-bedrijf: Bloomia
+    logo-bedrijf: /assets/images/upload/bloomia.png
+  - logo-bedrijf: /assets/images/upload/gemeente-amsterdam.png
+    naam-bedrijf: Gemeente Amsterdam
 contact-titel: Contact
 contact-omschrijving: We komen graag met je in contact. Bel of mail direct een
   van onze collega’s of vul onderstaand formulier in. Lorem ipsum dolor sit
