finished teammember page

--- a/_data/werken-bij-ons.yml
+++ b/_data/werken-bij-ons.yml
@@ -1,4 +1,5 @@
-title: Werken bij ons
+title: Werken bij
+afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst:
   Hier komt tekst We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep
   kan staan en ook in staat is individuele coachgesprekken te voeren. Je
