--- a/_compress_images_cache.yml
+++ b/_compress_images_cache.yml
@@ -42,3 +42,4 @@ assets/images/upload/vraagtekens.jpg: vraagtekens.jpg
 assets/images/upload/willemijn.jpg: willemijn.jpg
 assets/images/upload/willemijn.png: willemijn.png
 assets/images/upload/zilla.jpg: zilla.jpg
+assets/images/upload/Daan_22_Kl1_PMT0723.jpg: Daan_22_Kl1_PMT0723.jpg
