--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,15 @@ collections:
 
 # kramdown:
 #   input: Kramdown
+plugins:
+  - jekyll-compress-images
+
+compress_images:
+  images_path: "assets/images/**/*.{gif,png,jpg,jpeg,svg}"
+
+imageoptim:
+  pngout: false
+  svgo: false
+  verbose: false
+  oxypng: false
+  pngcrush: false
