--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -2,23 +2,35 @@ title: Hoe wij werken
 afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: >-
   Is dit 'hoe wij te werk gaan'? Met de uitgangspunten van slide 5 in ons achterhoofd. Dus concreet hoe we aan de slag gaan. Pragmatici moeten hier een beeld krijgen op hun vraag: hoe werken deze mensen dan? Manier van van maatwerk – traject – veel afstemming en parnterschap en evaluatie?
-kop: Als coach/begeleider van ontwikkelprogramma’s
-wat-je-doet: Wat doe je als?
-wat-je-doet-tekst: >-
-  Je maakt op maat programma’s waarin medewerkers en managers van
-  organisaties zich kunnen ontwikkelen. Denk hierbij als een jaartraject
-  ‘Persoonlijk Leiderschap’, een ‘Masterclass-traject voor talent’ of
-  andere vormen van trainee- of leiderschapsprogramma’s.
+waar-wij-voor-staan: Binnen kaders resultaatgericht
+waar-wijvoor-staan-tekst: "We beginnen met koffie, systemische blik op het geheel, wat is hier nou echt aan de hand? Ongevraagd advies. Realistische kades en verwachtingen. Geen franje. designen waar mogelijk met de doelgroep. Waar mogelijk pragmatische buiten locaties actieve vormen en verdiepende gesprekken krachtige besluitvorming evt roer overnemend oog voor de ind mens en zijn werk en prive context Resulteert: monitoren evalueren follow up geen 'one offs'. "
+waarde-1-titel: Mensgericht
+waarde-1-tekst: >
+  We creëren synergie tussen mensen onderling, en hun verbinding met het doel
+  van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
+  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.
 
 
-  We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep
-  kan staan en ook in staat is individuele coachgesprekken te voeren. Je
-  frisse blik en creativiteit zijn van harte welkom, evenals je vermogen
-  om, ongeacht de omstandigheden, op een constructieve manier om te gaan
-  met groepsdynamiek. Je blik is breder dan persoonlijke ontwikkeling
-  alleen, je hebt interesse in organisatie ontwikkeling, van strategie tot
-  uitvoering en bent eager om daar meer over te leren. Je kunt goed
-  samenwerken en bent tegelijkertijd autonoom genoeg om in onze
-  kleinschalige, platte organisatie je eigen weg te vinden. Het spiegelen
-  van klanten, collega’s en ook de spotlight op jezelf richten, vind je
-  een mooie uitdaging.
+  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? 
+
+
+  *Tekst gaat hier eigenlijk nog door maar dit wordt te lang.*
+waarde-1-afbeelding: /assets/images/upload/icoon3.png
+waarde-2-titel: Transparant
+waarde-2-tekst: >-
+  We bouwen aan vertrouwen. Aan persoonlijk leiderschap  en professionele
+  ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We
+  werken open en transparant samen met onze klanten. 
+
+
+  Als Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
+waarde-2-afbeelding: /assets/images/upload/icoon2.png
+waarde-3-titel: Systemisch
+waarde-3-tekst: >-
+  We sluiten nauw aan bij de bestaande context van een  organisatie en mensen.
+  We bekijken iedere vraag, hoe groot of klein ook, met een brede blik. 'Wat is
+  hier nou echt aan de hand? Welke patronen spelen hier?' 
+
+
+  Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
+waarde-3-afbeelding: /assets/images/upload/icoon1.png
