added hoe wij werken to cms

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -7,6 +7,7 @@ landing-tekt: >-
 
 
   Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
+pagina-afbeelding: /assets/images/upload/parachute.jpg
 waar-wij-voor-staan: Waar wij voor staan
 waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
   hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
