--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -1,5 +1,5 @@
 title: Hoe wij werken
-afbeelding: /assets/images/upload/parachute.jpg
+pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: >-
   Is dit 'hoe wij te werk gaan'? Met de uitgangspunten van slide 5 in ons achterhoofd. Dus concreet hoe we aan de slag gaan. Pragmatici moeten hier een beeld krijgen op hun vraag: hoe werken deze mensen dan? Manier van van maatwerk – traject – veel afstemming en parnterschap en evaluatie?
 waar-wij-voor-staan: Binnen kaders resultaatgericht
