--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,12 +1,9 @@
 slogan: Veranderen is mensenwerk
 landing-tekt: >-
-  Human Connection is een organisatieadviesbureau van 15 mensen sterk.
+  Human Connection is een organisatieadviesbureau dat zich richt op de
+  menselijke kant van organisaties.​\
 
-
-  Wij begeleiden de ontwikkeling van organisaties en professionals zodat mensen op een waardevolle manier samenwerken in een gezonde organisatiecultuur. ​
-
-
-  Ons werkveld is breed, in de private en publieke sector. We helpen leidinggevenden en medewerkers om proactief te worden en te blijven. Dat doen we altijd op maat, met oog voor wat de mens(en) beweegt.
+  Vanuit verschillende rollen begeleiden we leiders, teams en individuele professionals om zich te ontwikkelen en proactiever (samen) te werken.​ We werken altijd op maat, met een brede blik voor mensen in hun context, een gezonde bedrijfsvoering en de ontwikkeling van de organisatiecultuur.​ We zijn ervaren in een breed werkveld, houden van een complexe uitdaging en kijken met een optimistische blik naar de mogelijkheden.
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 waar-wij-voor-staan: Waar wij voor staan
 waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
